[package]
name = "arc-offload"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.12.4", features = ["json", "blocking", "multipart"] }
rpassword = "7.3.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
